--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "teachingtool",
-    "short_name": "teachingtool",
+    "name": "synthesissoftware_pos",
+    "short_name": "synthesissoftware_pos",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
