--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/fonts/OpenSans-Bold.ttf":["assets/fonts/OpenSans-Bold.ttf"],"assets/fonts/OpenSans-Regular.ttf":["assets/fonts/OpenSans-Regular.ttf"],"assets/logo.png":["assets/logo.png"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/login_background.jpg":["assets/login_background.jpg"]}
